--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "html-react-parser": "^5.1.10",
     "next": "14.1.4",
     "react": "^18",
