--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.1.0",
     "react-redux": "^9.1.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
